tests/files/lexer_tests/should_fail/117.cmdr
//Should not parse due to unterminated scope
do {echo hi; while (true);